fixed vertical gaps

--- a/static/viki_web/css/scss/_cart.scss
+++ b/static/viki_web/css/scss/_cart.scss
@@ -602,6 +602,7 @@
     border: 1px solid $colorPrimary;
     background-color: #fff;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+    height: 100%;
   }
   
   &__img {
@@ -625,7 +626,7 @@
   &__info {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.25rem;
     margin-bottom: 0.75rem;
     flex-grow: 1;
   }
@@ -639,6 +640,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    min-height: 1rem;
   }
   
   &__article {
@@ -651,12 +653,18 @@
     font-size: 0.75rem;
     color: $colorPrimary;
     margin: 0;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    min-height: 3.3rem;
+    line-height: 1.4;
   }
   
   &__price {
     font-size: 0.9rem;
     color: $colorPrimary;
-    margin: 0.5rem 0 0 0;
+    margin: 0.25rem 0 0 0;
     font-weight: 600;
     display: flex;
     justify-content: space-between;
@@ -676,6 +684,9 @@
     margin-bottom: 0.75rem;
     padding-top: 0.5rem;
     border-top: 1px solid $colorSecondary50;
+    flex-wrap: wrap;
+    max-height: 4.5rem;
+    overflow-y: auto;
   }
   
   &__cart-btn {
@@ -687,11 +698,20 @@
     &__img {
       height: 160px;
     }
+    
+    &__description {
+      min-height: auto;
+      -webkit-line-clamp: 4;
+    }
   }
   
   @media (max-width: 576px) {
     &__article, &__description {
       font-size: 0.7rem;
+    }
+    
+    &__name {
+      min-height: auto;
     }
   }
 }
